fixed button alignment in hero section and made it responsive

--- a/styles.css
+++ b/styles.css
@@ -134,13 +134,20 @@ header p {
   margin-block: 24px;
 }
 
+.btn-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 32px;
+  gap: 16px;
+}
+
 header button:nth-of-type(1) span {
   color: var(--cyan-300);
 }
 
 header button:nth-of-type(2) {
-  margin-top: 16px;
-  margin-bottom: 32px;
   background-color: var(--purple-600);
 }
 
@@ -186,6 +193,10 @@ section .counter {
 }
 
 @media (min-width: 768px) {
+  .btn-container {
+    flex-direction: row;
+  }
+
   .images-container {
     grid-template-columns: repeat(4, 1fr);
   }
